@startuml 数据库关系图_设备租赁
skinparam backgroundColor #FEFEFE
skinparam defaultFontName Microsoft YaHei
skinparam defaultFontSize 11

title 数据库关系图 - 设备租赁模块

entity "shebeizulin\n设备信息表" as SB {
    * id : BIGINT <<PK>>
    shebeimingcheng : VARCHAR
    kucunshuliang : INT
    zulinjiage : DECIMAL
}

entity "zulinjilu\n租赁记录表" as ZL {
    * id : BIGINT <<PK>>
    shebeimingcheng : VARCHAR <<FK>>
    yonghuzhanghao : VARCHAR <<FK>>
    zulinjine : DECIMAL
    zulinshijian : DATETIME
    sfsh : VARCHAR
}

entity "zulinguihai\n租赁归还表" as GH {
    * id : BIGINT <<PK>>
    shebeimingcheng : VARCHAR <<FK>>
    yonghuzhanghao : VARCHAR <<FK>>
    guihaishijian : DATETIME
    sfsh : VARCHAR
}

entity "shebeiweixiu\n设备维修表" as WX {
    * id : BIGINT <<PK>>
    shebeimingcheng : VARCHAR <<FK>>
    yuangongzhanghao : VARCHAR <<FK>>
    weixiuneirong : TEXT
    weixiuzhuangtai : VARCHAR
}

entity "huiyuan\n会员表" as HY {
    * id : BIGINT <<PK>>
    yonghuzhanghao : VARCHAR <<UK>>
    xingming : VARCHAR
}

entity "yuangong\n员工表" as YG {
    * id : BIGINT <<PK>>
    yuangongzhanghao : VARCHAR <<UK>>
    yuangongxingming : VARCHAR
}

SB ||--o{ ZL : "1:N 被租赁"
SB ||--o{ GH : "1:N 被归还"
SB ||--o{ WX : "1:N 被维修"
HY ||--o{ ZL : "1:N 租赁"
HY ||--o{ GH : "1:N 归还"
YG ||--o{ WX : "1:N 维修"

@enduml
